Import-TestToolkitToBcContainer fails when installing apps in online environment unless a container called bcserver exists
Add parameter -replacePackageId to Replace-DependenciesInAppFile to allow process to change package id in an app
Add parameter -replacePackageId to Publish-BcContainerApp to allow process to change package id in an app

2.0.3
Issue #1655 variable $scopes not set
Issue #1654 and #1656 Publish-BcContainerApp where the filename contains a comma fails.
New Function Get-BcInstalledExtensions to return installed extensions (including PTEs) from an online Business Central environment
New function New-BcDatabaseExport to start a new Database Export from an online Business Central environment
New function Get-BcDatabaseExportHistory to get the Database Export History from an online Business Central tenant/environment

2.0.2
Allow no credentials with filesOnly containers
Connect from inside the container to SaaS environment in Install-BcAppFromAppSource and Run-ConnectionTestToBcContainer to avoid file locks
Add parameter allowInstallationOnProduction to Install-BcAppFromAppSource to allow installation in production environments
Publish-BcContainerApp was refactored to reuse the appfiles unpacking mechanism from Run-AlValidation and more

2.0.1
Issue #1646 Get-BcArtifactUrl has decome a low slower with 2.0.0
Issue #1645 Build Partially Succeeded - revert behavior

2.0.0
Issue #1596 support URLs in previousApps in Run-AlValidation
Issue #1606 do not prune when creating images
Remove compatibility for ancient generic image versions from New-BcContainer
New function New-BcAuthContext to create an authContext for BC SaaS based on credentials, a refresh token or a device login
New function Renew-BcAuthContext to renew an authContext for BC SaaS if necessary
Added parameteres bcAuthContext and environment to Compile-AppInBcContainer to allow Compile-AppInBcContainer to download symbols from BC SaaS