@@ -3,6 +3,8 @@ Remove-BcEnvironment fails after waiting for environment removal
 Import-TestToolkitToBcContainer fails when installing apps in online environment unless a container called bcserver exists
 Add parameter -replacePackageId to Replace-DependenciesInAppFile to allow process to change package id in an app
 Add parameter -replacePackageId to Publish-BcContainerApp to allow process to change package id in an app
+Run-AlPipeline using a BcSaaS Sandbox environment to use replacePackageId when publishing previousApps and add delay to avoid conflicts
+New-BcEnvironment to wait for other environments being created before creating
 
 2.0.3
 Issue #1655 variable $scopes not set
